--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </select>
                 </div>
 
-                <input type="hidden" name="redirectTo" value="obrigado.html">
+                <input type="hidden" name="redirectTo" value="https://emprestimo-sicredi.github.io/obrigado.html">
                 <input style="    background-color: forestgreen;
                 font-size: x-large;
             " type="submit" value="Solicitar" />
